<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_default"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mensajero.mensajerogo.LoginActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:paddingBottom="5dp">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/bariol_bold"
                android:gravity="center_horizontal"
                android:text="La app de Mensajero para conductores de carros"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tnumero"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/numero_tel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bariol"
                        android:hint="@string/prompt_num_tel"
                        android:imeActionLabel="@string/action_registrar_numero"
                        android:imeOptions="actionDone"
                        android:inputType="text|phone"
                        android:maxLines="1"
                        android:textColor="@android:color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/botoncodigo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="5"
                    android:background="@color/colorPrimary"
                    android:elevation="5dp"
                    android:text="Solicitar Código"
                    android:textColor="@color/blancotransparente"
                    android:textSize="8sp" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bariol"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/prompt_password"
                    android:imeOptions="actionDone"
                    android:inputType="number|phone"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/progresbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/layoutregistrar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/temail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:errorTextAppearance="@style/Error">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bariol"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        app:errorTextAppearance="@style/Error" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tnombre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_nombre"
                        android:imeActionLabel="@string/action_registrar_nombre"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textColor="@android:color/black" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <Button
                android:id="@+id/iniciarSesion"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorPrimary"
                android:elevation="20dp"
                android:text="@string/action_sign_in"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/registrar"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:autoLink="web"
                android:background="@android:color/transparent"
                android:elevation="20dp"
                android:text="@string/nueva_cuenta"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
